# productivity_system

./: .env.example  README.md  dev.cmd  index.html  package-lock.json  package.json
.github/workflows/: mac-check.yml  release.yml
extension/: README.md  background.js  blocked.html  blocked.js  manifest.json
src/: App.css  App.tsx  SettingsModal.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: blocklist_server.rs  db.rs  hosts_blocker.rs  lib.rs  main.rs  scheduler_loop.rs
src-tauri/src/commands/: goals.rs  habits.rs  mod.rs  progress.rs  schedules.rs  system.rs
src-tauri/tests/: mac_blocking.rs
src/auth/: AuthGate.tsx  LoginScreen.tsx  auth.css  supabase.ts
src/routes/dashboard/: Dashboard.tsx  dashboard.css
src/routes/scheduler/: BlockForm.tsx  ScheduleList.tsx  api.ts  mobileApps.ts  presets.ts  scheduler.css
src/routes/tracker/: GoalForm.tsx  GoalList.tsx  HabitList.tsx  ProgressPanel.tsx  Ring.tsx  Toasts.tsx  TrackerPage.tsx  api.ts  extractLines.ts  progress.ts  tracker.css
src/shared/: native.ts  platform.ts  types.ts  useNativeBlockSync.ts
